--- a/templates/admin_screen.html
+++ b/templates/admin_screen.html
@@ -1,3 +1,7 @@
+<!-- THERE IS A OPTION OF WHERE ADMIN CAN SEE ALL THE USERS THOSE WHO HAVE SIGNED UP -->
+<!-- THIS IS THE PAGE WHERE THE DETAILS OF ALL USERS CAN BE SEEN BY ADMIN -->
+<!-- IT DISPLAYS THE USERNAME AND EMAIL OF THE USERS -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
