--- a/templates/browse.html
+++ b/templates/browse.html
@@ -1,3 +1,6 @@
+<!-- PAGE WHERE WE UPLOAD THE PHOTOS USING BROWSE OPTION -->
+<!-- THE CORRESPONDING STYLING OF THIS PAGE IS IN PAGE2.CSS -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
