--- a/templates/drag_drop.html
+++ b/templates/drag_drop.html
@@ -1,3 +1,7 @@
+<!-- PAGE WHERE WE UPLOAD THE PHOTOS USING DRAG AND DROP OPTION -->
+<!-- THE CORRESPONDING STYLING OF THIS PAGE IS IN PAGE2.CSS -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
