--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,8 @@
+<!-- THIS IS THE PAGE WHERE IT DISPLAYS THE USER NAME AND THERE IS NAVBAR IN WHICH IT HAS OPTONS OF VIEW MY PHOTOS,
+CREATE NEW VIDEO IN WHICH IT HAS OPTIONS OF BROWSE,DRAG AND DROP AND SELECT FROM EXISTING PHOTOS AND AN OPTION OF LOGOUT -->
+<!-- THE STYLING OF THE PAGE IS IN HOME.CSS -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
