--- a/templates/inbuilt.html
+++ b/templates/inbuilt.html
@@ -1,3 +1,7 @@
+<!-- THIS IS THE PAGE AFTER NEW3.HTML IN WHICH WE SELECT AUDIO FROM INBUILT THEN IT REDIRECTS TO THIS PAGE -->
+<!-- THE STYLING OF THIS PAGE IS IN PAGE3.CSS -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
