--- a/templates/new.html
+++ b/templates/new.html
@@ -1,3 +1,6 @@
+<!-- THIS IS THE PAGE WHICH WE GET BY SELECTING "SELECT FROM EXISTING PHOTOS" IN NAVBAR TO GET PAGE WHERE WE NEED TO SELECT THE IMAGES TO CREATE VIDEO -->
+ 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
