--- a/templates/new2.html
+++ b/templates/new2.html
@@ -1,3 +1,5 @@
+<!-- THIS IS THE PAGE WHERE WE CAN SEE ALL THE PHOTOS THAT HAS BEEN UPLOADED EITHER THROUGH DRAG AND DROP OR BY BROWSING -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
