--- a/templates/new3.html
+++ b/templates/new3.html
@@ -1,3 +1,7 @@
+<!-- THIS IS  THE PAGE THAT WE GET AFTER WE SELECT AND SAVE THE IMAGES FRO CREATING THE VIDEO AND IN THIS PAGE THERE ARE OPTIONS FOR SELECTING THE AUDIO
+THERE ARE 2 OPTIONS OF SELECT AUDIO FROM IN BUILT STORAGE OR SELECT AUDIO FROM LOCAL STORAGE -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
