--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,7 @@
+<!-- SIGN UP PAGE WHERE THE DETAILS OF THE USERNAME,EMAIL,PASSWORD WERE ENTERED -->
+<!-- THE CORRESPONDING STYLING OF THIS PAGE IS IN STYLE.CSS -->
+
+
 <!-- signup.html -->
 <!DOCTYPE html>
 <html lang="en">
